--- a/src/styles/headerStyle/headerpage.css
+++ b/src/styles/headerStyle/headerpage.css
@@ -1,8 +1,8 @@
 #header {
     width: 100%;
-    height: -90px;
     background-color: rgb(200, 215, 231);
     padding: 5.5px 12px;
+    border-bottom: 1px solid rgba(1, 1, 1, 0.055);
 }
 
 #header > .searchItens {
@@ -15,6 +15,7 @@
 #header > .searchItens > .area_search {
     padding: 2px;
     display: flex;
+    margin-left: -10px;
     border-radius: 8.66px;
     align-items: center;
     background-color: white;
@@ -52,16 +53,33 @@
 
 .menuList {
     position: absolute;
+    display: flex;
+    align-items: center;
+    flex-flow: column nowrap;
+    gap: 27px;
     top: 83.5px;
     right: 0;
     padding: 8px;
-    width: 50%;
-    height: 84vh;
-    border-bottom-left-radius: 10px;
+    width: 80%;
+    border-left: 1px solid rgba(1, 1, 1, 0.075);
+    border-bottom: 1px solid rgba(1, 1, 1, 0.075);
+    border-bottom-left-radius: 6px;
     background-color: rgb(200, 215, 231);
 }
 
-.menuList > .tittle_category {
-    color: orange;
+.menuList > .section_category {
+    background-color: rgba(37, 22, 80, 0.673);
+    width: 88%;
+    border-radius: 6px;
+    min-height: 190px;
+    max-height: 270px;
+    padding: 8px;
+}
+
+.menuList > .section_category > .tittle_category {
+    margin-top: 13px;
+    margin-bottom: 30px;
+    color: rgb(255, 255, 255);
+    text-shadow: 1.4px 1.4px 2px rgba(24, 26, 30, 0.312);
 }
 
