--- a/src/styles/headerStyle/liststructure.css
+++ b/src/styles/headerStyle/liststructure.css
@@ -20,3 +20,9 @@
     color: yellow;
     cursor: pointer;
 }
+
+#ul_list  > li > #close_item_list_icon {
+    color: rgb(255, 81, 0);
+    cursor: pointer;
+    margin-top: -2.45px;
+}
