--- a/src/styles/headerStyle/headerpage.css
+++ b/src/styles/headerStyle/headerpage.css
@@ -39,11 +39,24 @@
     border: 2px solid rgb(188, 188, 249);
 }
 
+#header > .searchItens > #icon_add_list {
+    color: rgb(27, 27, 216);
+    margin-top: -6.5px;
+    cursor: pointer;
+}
+
 
 #header > .searchItens > .area_search > #search_icon {
     cursor: pointer;
     margin-right: 5px;
 }
+
+#header > .searchItens > .addItemList {
+    padding: 15px;
+    border-radius: 7px;
+    box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.29);
+}
+
 
 #header > .searchItens > .area_cart {
     cursor: pointer;
