--- a/src/styles/showaddlist.css/showaddlist.css
+++ b/src/styles/showaddlist.css/showaddlist.css
@@ -1,7 +1,39 @@
 .addItemList {
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    flex-flow: column nowrap;
     position: absolute;
     top: 40%;
-    left: 0;
-    width: 100%;
-    background-color: gray;
+    left: 18%;
+    width: 66%;
+    gap: 20px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.375);
+    height: 180px;
+    padding: 5px 20px;
+    background-color: rgb(187, 220, 255);
+}
+
+.addItemList > h2 {
+    margin-top: 15px;
+    font-size: 1.75em;
+    color: rgb(39, 39, 102);
+    text-shadow: 1.37px 1.37px 1px rgba(117, 117, 251, 0.912);
+}
+
+.addItemList > input {
+    border-radius: 6px;
+    padding: 5px;
+    outline: none;
+    font-size: 1em;
+    border: 1px solid rgba(0, 0, 0, 0.416);
+}
+
+.addItemList > input::placeholder {
+    text-align: center;
+}
+
+.addItemList > input:focus {
+    border: 1px solid rgb(110, 110, 254);
 }
