--- a/src/styles/showaddlist.css/showaddlist.css
+++ b/src/styles/showaddlist.css/showaddlist.css
@@ -5,8 +5,8 @@
     flex-flow: column nowrap;
     position: absolute;
     top: 40%;
-    left: 18%;
-    width: 66%;
+    left: 10%;
+    width: 80%;
     gap: 20px;
     border-radius: 10px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.375);
@@ -22,21 +22,49 @@
     text-shadow: 1.37px 1.37px 1px rgba(117, 117, 251, 0.912);
 }
 
-.addItemList > input {
+.addItemList > .input-add-list {
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: center;
+    align-items: center;
+    gap: 7px;
+}
+
+.addItemList > .input-add-list > label {
+    font-size: 20px;
+}
+
+.addItemList  > #category_area_input {
+    position: absolute;
+    left: 20px;
+    top: 93px;
+    background-color: rgba(0, 0, 0, 0.262);
+}
+
+.addItemList  > #input_area_input {
+    position: absolute;
+    left: 75.3px;
+    top: 165px;
+}
+
+
+.addItemList > .input-add-list > input {
     border-radius: 6px;
-    padding: 5px;
+    padding: 12px;
     transition:  ease 0.36s;
     outline: none;
     font-size: 1em;
     border: 1px solid rgba(38, 27, 88, 0.362);
+    letter-spacing: 0.25px;
 }
 
-.addItemList > input::placeholder {
+.addItemList > .input-add-list > input::placeholder {
     font-weight: 500;
     color: rgba(0, 0, 0, 0.858);
     text-align: center;
+    font-size: 1.1em;
 }
 
-.addItemList > input:focus {
+.addItemList > .input-add-list > input:focus {
     border: 1px solid rgb(129, 129, 254);
 }
