Finished style on mobile version

--- a/src/styles/showaddlist.css/showaddlist.css
+++ b/src/styles/showaddlist.css/showaddlist.css
@@ -5,20 +5,20 @@
     flex-flow: column nowrap;
     position: absolute;
     top: 40%;
-    left: 10%;
-    width: 80%;
+    left: 5%;
+    width: 90%;
     gap: 20px;
     border-radius: 10px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.375);
-    height: 250px;
+    height: 320px;
     padding: 5px 20px;
-    background-color: rgb(187, 220, 255);
+    background-color: rgb(84, 98, 113);
 }
 
 .addItemList > h2 {
-    margin-top: 15px;
+    margin-top: 7px;
     font-size: 1.75em;
-    color: rgb(39, 39, 102);
+    color: rgb(215, 215, 252);
     text-shadow: 1.37px 1.37px 1px rgba(117, 117, 251, 0.912);
 }
 
@@ -31,19 +31,28 @@
 }
 
 .addItemList > .input-add-list > label {
+    font-weight: 500;
+    border-bottom: 4px solid rgb(160, 160, 252);
+    color: white;
     font-size: 20px;
 }
 
+.addItemList > .input-add-list > label .arrow-to-input {
+    color: yellow;
+    margin-left: 4px;
+    margin-bottom: -5.5px;
+}
+
+
 .addItemList  > #category_area_input {
     position: absolute;
-    left: 20px;
+    left: 14.6px;
     top: 93px;
-    background-color: rgba(0, 0, 0, 0.262);
 }
 
 .addItemList  > #input_area_input {
     position: absolute;
-    left: 75.3px;
+    left: 65.3px;
     top: 165px;
 }
 
@@ -54,6 +63,7 @@
     transition:  ease 0.36s;
     outline: none;
     font-size: 1em;
+    font-weight: 500;
     border: 1px solid rgba(38, 27, 88, 0.362);
     letter-spacing: 0.25px;
 }
@@ -67,4 +77,19 @@
 
 .addItemList > .input-add-list > input:focus {
     border: 1px solid rgb(129, 129, 254);
+}
+
+.addItemList > #add_adn_save_on_list {
+    background-color: orange;
+    position: absolute;
+    top: 248px;
+    padding: 10px;
+    width: 70%;
+    border-radius: 5px;
+    border: none;
+    color: white;
+    cursor: pointer;
+    font-size: 1.27em;
+    font-weight: 550;
+    text-shadow: 0px 0px 1px black;
 }
