--- a/src/styles/headerStyle/headerpage.css
+++ b/src/styles/headerStyle/headerpage.css
@@ -72,27 +72,11 @@
     gap: 27px;
     top: 82px;
     right: 0;
-    padding: 8px;
+    padding: 4px 5px 0px 5px;
     width: 60%;
+    min-height: 60vh;
     border-left: 1px solid rgba(23, 45, 244, 0.303);
     border-bottom: 1px solid rgba(1, 1, 1, 0.075);
     border-bottom-left-radius: 6px;
     background-color: rgb(200, 215, 231);
 }
-
-.menuList > .section_category {
-    background-color: rgba(37, 22, 80, 0.673);
-    width: 88%;
-    border-radius: 6px;
-    min-height: 190px;
-    max-height: 270px;
-    padding: 8px;
-}
-
-.menuList > .section_category > .tittle_category {
-    margin-top: 13px;
-    margin-bottom: 30px;
-    color: rgb(255, 255, 255);
-    text-shadow: 1.4px 1.4px 2px rgba(24, 26, 30, 0.312);
-}
-
