--- a/src/styles/headerStyle/headerpage.css
+++ b/src/styles/headerStyle/headerpage.css
@@ -70,12 +70,13 @@
     align-items: center;
     flex-flow: column nowrap;
     gap: 27px;
-    top: 85.47px;
+    top: 84.4px;
     right: 0;
     padding: 4px 5px 0px 5px;
     width: 64%;
     min-height: 60vh;
     border-bottom: 3px solid rgba(1, 1, 1, 0.151);
+    border-left: 1px solid rgba(32, 31, 31, 0.075);
     border-bottom-left-radius: 6px;
-    background-color: rgb(200, 215, 231);
+    background-color: rgb(213, 227, 241);
 }
